<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>15</version>
  </parent>
  <groupId>io.quarkiverse.renarde</groupId>
  <artifactId>quarkus-renarde-parent</artifactId>
  <version>3.0.9</version>
  <packaging>pom</packaging>
  <name>Quarkus - Renarde - Parent</name>
  <modules>
    <module>deployment</module>
    <module>runtime</module>
    <module>security</module>
    <module>oidc</module>
    <module>oidc-tests</module>
    <module>docs</module>
    <module>jpa</module>
    <module>pdf</module>
    <module>barcode</module>
    <module>jpa-deployment</module>
    <module>test</module>
    <module>backoffice</module>
    <module>transporter</module>
  </modules>
  <scm>
    <connection>:git:git@github.com:quarkiverse/quarkus-renarde.git</connection>
    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-renarde.git</developerConnection>
    <url>https://github.com/quarkiverse/quarkus-renarde</url>
    <tag>3.0.9</tag>
  </scm>
  <properties>
    <compiler-plugin.version>3.8.1</compiler-plugin.version>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.version>3.7.0</quarkus.version>
    <openhtmltopdf.version>1.0.10</openhtmltopdf.version>
    <zxing.version>3.5.1</zxing.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>it</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>integration-tests</module>
      </modules>
    </profile>
  </profiles>
</project>
